static/media/submissions/anvit/compile.txt
  File "Solution.py", line 1
    print 'hello world
                     ^
SyntaxError: EOL while scanning string literal
